@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.7~beta3" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.7" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.tulip" version="2.2.4" />
@@ -23,9 +23,10 @@
 - Instantiate query variable in run function
 - Search tv shows/series subtitles with dual queries to maximize subtitles match
 - Add clear cache function
-- Notify user when search term is too broad
+- Notify user when search term might be too broad or incorrect
 - Increased sleep timeout from 500 ms to 750 for threaded requests
 - Increased number of possible requests before exiting the loop for threaded requests
+- Made regexes less aggressive
 
 [B]1.5.5 - 1.5.6[/B]
 - Log exceptions and queries for debugging purposes
