@@ -2,9 +2,10 @@
 - Instantiate query variable in run function
 - Search tv shows/series subtitles with dual queries to maximize subtitles match
 - Add clear cache function
-- Notify user when search term is too broad
+- Notify user when search term might be too broad or incorrect
 - Increased sleep timeout from 500 ms to 750 for threaded requests
 - Increased number of possible requests before exiting the loop for threaded requests
+- Made regexes less aggressive
 
 [B]1.5.5 - 1.5.6[/B]
 - Log exceptions and queries for debugging purposes
